# elt-data-lakehouse

./: .gitattributes  .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
services/airflow/: Dockerfile  docker-compose.override.yml  requirements.txt
services/airflow/dags/: dag_dbt.py  dag_ingestao_minio.py  dag_teste.py  dbt_cosmos.py  elt_pipeline.py  minio.py  my_cosmos_dag.py
services/dbt_workflow/: dbt_project.yml  profiles.yml  python-dbt.dockerfile
services/dbt_workflow/models/: sources.yml
services/dbt_workflow/models/bronze/crm/: bronze_crm_cust_info.sql  bronze_crm_prd_info.sql  bronze_crm_sales_details.sql
services/dbt_workflow/models/bronze/erp/: bronze_erp_cust_az12.sql  bronze_erp_loc_a101.sql  bronze_erp_px_cat_g1v2.sql
services/dbt_workflow/models/gold/: dim_customers.sql  dim_products.sql  fact_sales.sql
services/dbt_workflow/models/silver/crm/: silver_crm_cust_info.sql  silver_crm_prd_info.sql  silver_crm_sales_details.sql
services/dbt_workflow/models/silver/erp/: silver_erp_cust_az12.sql  silver_erp_loc_a101.sql  silver_erp_px_cat_g1v2.sql
utils/: buckets_config.sh  ingestao22.py  ingestao_minio.py  wait-for-minio.sh
