[project]
name = "lakehouse-dbt-duckdb-metabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.0",
    "astronomer-cosmos>=1.10.2",
    "dbt>=1.0.0.40.6",
    "dbt-duckdb>=1.9.6",
    "duckdb>=1.4.0",
    "loguru>=0.7.3",
    "minio>=7.2.17",
    "python-dotenv>=1.1.1",
]
